# Ballotly

./: .gitignore  HEARTBEAT.md  HOW_TO_RUN.md  README.md  pyproject.toml  requirements.txt
scripts/: make_sample_video.py
src/oratory_analyzer/: __init__.py  cli.py  config.py  heartbeat.py  live.py  pipeline.py
src/oratory_analyzer/analysis/: __init__.py  aggregator.py  scoring.py
src/oratory_analyzer/detection/: __init__.py  speaker.py  tracker.py
src/oratory_analyzer/domain/: __init__.py  frame.py  geometry.py  indices.py  landmarks.py
src/oratory_analyzer/landmarks/: __init__.py  base.py  face.py  fakes.py  hands.py  pose.py
src/oratory_analyzer/metrics/: __init__.py  base.py  eye_contact.py  facial_expressivity.py  gestures.py  hand_gestures.py  head_stability.py  posture.py  registry.py
src/oratory_analyzer/report/: __init__.py  base.py  builder.py  html.py  json_report.py  markdown.py  plots.py
src/oratory_analyzer/video/: __init__.py  annotator.py  reader.py  writer.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_pipeline_video.py  test_video_io.py
tests/unit/: test_analysis.py  test_cli.py  test_config.py  test_detection.py  test_frame.py  test_geometry.py  test_hands.py  test_heartbeat.py  test_landmark_pipeline.py  test_landmarks.py  test_live.py  test_metrics.py  test_metrics_base.py  test_report.py
