[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oratory-analyzer"
version = "0.1.0"
description = "Face & posture tracking that analyzes a speaker's video and reports on debate/oratory technique."
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [{ name = "Oratory Analyzer" }]
dependencies = [
    "mediapipe==0.10.14",
    "opencv-python>=4.10",
    "numpy>=1.24,<2.0",
    "jinja2>=3.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
oratory-analyzer = "oratory_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "integration: end-to-end pipeline tests (may be slower, still no external ML deps)",
    "requires_mediapipe: tests that load the real MediaPipe models",
]

[tool.coverage.run]
branch = true
source = ["oratory_analyzer"]
omit = ["*/landmarks/face.py", "*/landmarks/pose.py", "*/video/*"]
